// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.edpaggregator;

import "google/protobuf/any.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";

option java_package = "org.wfanet.measurement.config.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "RequisitionFetcherConfigProto";

// Individual config per EDP.
message DataProviderRequisitionConfig {
  // Data Provider Name
  string data_provider = 1;
  // Config for requisitions written to GCS
  message GcsStorageDetails {
    // The GCS project id. Optional.
    string project_id = 1;
    // The GCS bucket name
    string bucket_name = 2;
  }
  // Config for requisitions written to file system
  message FileSystemStorageDetails {}
  // The type of storage
  oneof storage {
    // Used for gcs
    GcsStorageDetails gcs_storage_details = 2;
    // Used for file system
    FileSystemStorageDetails file_system_storage_details = 3;
  }
  // Storage path prefix
  string storage_path_prefix = 4;
  // The details to connect as the EDP to the Kingdom
  message ConnectionDetails {
    // The path in the jar to the cert
    string cert_jar_resource_path = 1;
    // The path in the jar to the private key
    string private_key_jar_resource_path = 2;
    // The path in the jar to the cert collection
    string cert_collection_jar_resource_path = 3;
  }
  // How the EDP connects to the Kingdom
  ConnectionDetails connection_details = 5;
}

// The Requisition Fetcher configuration
message RequisitionFetcherConfig {
  // All the configs per EDP
  repeated DataProviderRequisitionConfig configs = 1;
}
